Changelog
=========

2.1.8 (unreleased)
------------------

- Support for Dexterity added. The conversation enabled method now detects and
  supports Dexterity-based content types.
  [timo]

- No more recursive came_from redirection after logged_in.
  [kcleong, huubbouma]

- Danish translation updated.
  [stonor]

- Documentation and howtos updated.
  [timo]


2.1.7 (2012-06-29)
------------------

- Prune duplicated test code.
  [pjstevns]

- Update version in buildout.cfg to allow development.
  [pjstevns]

- Conversation.total_comments only counts published comments.
  Fixes bug #11591.
  [pjstevns]

- Set workflow status of comments during migration based on
  the state of the Discussion Item.
  [pjstevns]


2.1.6 (2012-05-30)
------------------

- Add Site Administrator role to Review comments permission.
  [gaudenz]

- Fix excessive JS comment deletion.
  [gaudenz]

- No longer depend on zope.app packages.
  [hannosch]


2.1.5 (2012-04-05)
------------------

- Redirect to "/view" for Image, File and anything listed as requiring
  a view in the url to properly display comments.
  [eleddy]

- Make comments and controlpanel views more robust, so they don't break if no
  workflow is assigned to the 'Discussion Item' content type.
  [timo]

- Warning message added to discussion control panel that shows up if there are
  unmigrated comments.
  [timo]

- Make topic/collection tests pass when plone.app.collection is installed.
  [timo]


2.1.4 (2012-02-29)
------------------

- Revert modification date since this is fixed in p.a.caching now.
  [eleddy]

- Add missing meta_typ to "Review comments" portal action.
  [batlock666]


2.1.3 (2012-01-24)
------------------

- Set modified date of object receiving comments so that caching works
  correctly (304s)
  [eleddy]


2.1.2 (2011-12-21)
------------------

- Fixed language code error in Ukrainian translation. The message
  catalog was erroneously set to "English".
  [chervol]
