@@ -1,15 +1,0 @@
-[buildout]
-extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.1.x.cfg
-index = http://d.pypi.python.org/simple
-package-name = plone.app.discussion
-package-directory = plone/app/discussion
-parts += instance
-
-versions = versions
-
-[instance]
-eggs += plone.app.discussion [test]
-
-[versions]
-plone.app.discussion = 2.1.7.dev0
