@@ -1,68 +1,0 @@
-[buildout]
-extends =
-    buildout.cfg
-extensions = buildout.eggtractor mr.developer
-tractor-src-directory =
-    .
-    src
-auto-checkout =
-    collective.autoresizetextarea
-    collective.akismet
-    collective.z3cform.norobots
-    plone.formwidget.captcha
-    plone.formwidget.recaptcha
-
-parts +=
-    omelette
-    releaser
-    pocompile
-    zopepy
-    sphinxbuilder
-    sphinxupload
-
-[instance]
-eggs +=
-    Products.PdbDebugMode
-    Products.PrintingMailHost
-    roman
-    Sphinx
-    Sphinx-PyPI-upload
-    repoze.sphinx.autointerface
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
-packages = ${instance:location}/lib/python ./
-
-[releaser]
-recipe = zc.recipe.egg
-eggs = jarn.mkrelease
-
-[pocompile]
-recipe = zc.recipe.egg
-eggs = zest.pocompile
-
-[zopepy]
-recipe = zc.recipe.egg
-eggs = ${instance:eggs}
-interpreter = zopepy
-scripts = zopepy
-
-[sphinxbuilder]
-recipe = collective.recipe.sphinxbuilder
-interpreter = ${buildout:directory}/bin/zopepy
-
-[sphinxupload]
-recipe = collective.recipe.template
-input = inline:
-    #!/bin/sh
-    bin/zopepy setup.py upload_sphinx
-output = ${buildout:directory}/bin/sphinxupload
-mode = 755
-
-[sources]
-collective.akismet = svn https://svn.plone.org/svn/collective/collective.akismet/trunk
-collective.autoresizetextarea = svn https://svn.plone.org/svn/collective/collective.autoresizetextarea/trunk
-collective.z3cform.norobots = svn https://svn.plone.org/svn/collective/collective.z3cform.norobots/trunk
-plone.formwidget.captcha = svn https://svn.plone.org/svn/plone/plone.formwidget.captcha/trunk/
-plone.formwidget.recaptcha = svn https://svn.plone.org/svn/plone/plone.formwidget.recaptcha/trunk/
