@@ -1,8 +1,0 @@
-[buildout]
-extends =
-    buildout.cfg
-    https://raw.github.com/plone/buildout.jenkins/master/jenkins.cfg
-    https://raw.github.com/plone/buildout.jenkins/master/jenkins-code-analysis.cfg
-jenkins-test-eggs = plone.app.discussion [test]
-jenkins-test-directories = plone/app/discussion
-
