@@ -1,1 +1,0 @@
-Source directory for plone.app.discussion add-ons and related products.
